# deeporra

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deeporra/chunking/: chunker.py
deeporra/contracts/: enums.py  errors.py  interfaces.py
deeporra/dashboard/: __main__.py  app.py
deeporra/graph/: graph_builder.py
deeporra/indexing/: index_service.py  sqlite_fts_persistence.py
deeporra/inputs/: github_preparation.py  service.py  workspace.py
deeporra/mcp_server/: __main__.py  server.py
deeporra/parser/: import_extractor.py  python_ast.py
deeporra/querying/: service.py
deeporra/scanner/: file_scanner.py  ignore_rules.py
deeporra/storage/: chroma_store.py  fts_store.py  graph_store.py  sqlite_store.py
docs/: 01_CONTEXT.md  02_PRODUCT_SPEC.md  03_SYSTEM_ARCHITECTURE.md  04_DATA_MODEL.md  05_INDEXING_AND_RETRIEVAL.md  06_MCP_TOOLS_CONTRACT.md  07_DASHBOARD_SPEC.md  08_SCENARIOS_AND_ACCEPTANCE_TESTS.md  09_AGENT_TASKS.md  10_CLI_VISUAL_IDENTITY.md  RELEASE_CHECKLIST.md
docs/releases/: v0.1.0.md
fcode/: __init__.py  __main__.py
fcode/cli/: __init__.py  dependencies.py  main.py
fcode/config/: __init__.py  defaults.py  settings.py
fcode/contracts/: __init__.py  enums.py  errors.py  interfaces.py  models.py
fcode/dashboard/: __init__.py  __main__.py  api.py  app.py
fcode/embeddings/: __init__.py  encoder.py
fcode/graph/: graph_builder.py
fcode/indexing/: __init__.py  full_rebuild.py  index_service.py  sqlite_fts_persistence.py  state_machine.py  status_reader.py
fcode/inputs/: __init__.py  errors.py  github_preparation.py  local_preparation.py  models.py  service.py  source_classifier.py  workspace.py  zip_preparation.py
fcode/mcp_server/: __init__.py  __main__.py  server.py
fcode/parser/: __init__.py  import_extractor.py  python_ast.py  route_detector.py  symbol_extractor.py
fcode/querying/: __init__.py  models.py  service.py
fcode/scanner/: file_scanner.py  ignore_rules.py  secret_detector.py
fcode/storage/: __init__.py  chroma_store.py  fts_store.py  graph_store.py  sqlite_store.py
fcode/utils/: __init__.py  health.py
tests/: __init__.py
tests/acceptance/: test_dashboard_smoke.py  test_mcp_acceptance.py  test_query_acceptance.py  test_wp6_acceptance_matrix.py  test_wp6_g01_exact_semantics.py  test_wp6_golden_fixture_integrity.py  test_wp6_golden_pipeline.py  test_wp6_manifest_schema.py  test_wp6_synthetic_repository.py
tests/integration/: test_wp5_cli.py  test_wp5_full_rebuild.py  (+2 more)
(+101 files in other folders)
