[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcode"
version = "0.1.0"
description = "Local-first repository intelligence tool for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dashboard = [
    "streamlit>=1.28.0",
]
mcp = [
    "mcp>=1.0.0",
]
multilang = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
]

[project.scripts]
fcode = "fcode.cli.main:app"

[tool.setuptools.packages.find]
include = ["fcode*"]
