[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeporra"
version = "0.1.0"
description = "Local-first repository intelligence for developers and AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "Ashish Kumar" },
]

dependencies = [
    "chromadb>=0.4.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0",
    "typer>=0.9.0",
    "typing-extensions>=4.5.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Streamlit",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
multilang = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/ashishkumar62649/deeporra"
Source = "https://github.com/ashishkumar62649/deeporra"
Issues = "https://github.com/ashishkumar62649/deeporra/issues"
Changelog = "https://github.com/ashishkumar62649/deeporra/blob/main/CHANGELOG.md"

[project.scripts]
deeporra = "deeporra.cli.main:app"

[tool.setuptools.packages.find]
include = ["deeporra*"]
